# Telegram-WhatsApp-Ai-bot

./: README.md  Royal.env  pyproject.toml  requirements.txt
llm_ma_bots/: Telegram.py  telegram_bot.py  whatsapp_bot.py
