[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_messaging_app_bots"
authors = [{ name = "ROYAL KATSIC", email = "royalkatsic@gmail.com", telegram = "@royalkatsictips", username = "@itsroyalkatsic", WhatsApp = "+256764093855" }]
description = "Implementations for LLMs at messaging apps."
requires-python = ">=3.11"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "llm_ma_bots.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
